fix: Align text to center in content error message

--- a/client/src/components/attachments/Attachments/Item.module.scss
+++ b/client/src/components/attachments/Attachments/Item.module.scss
@@ -23,6 +23,7 @@
     font-size: 20px;
     font-weight: bold;
     height: 20px;
+    text-align: center;
     width: 470px;
   }
 }
